change relative paths in index.html

--- a/demo/index.html
+++ b/demo/index.html
@@ -1,9 +1,9 @@
 <html>
 	<head>
 		<title>Sample</title>
-		<link rel="stylesheet" type="text/css" href="tokensearch.css"></link>
+		<link rel="stylesheet" type="text/css" href="../src/tokensearch.css"></link>
 		<script type="text/javascript" src="jquery-1.11.1.js"></script>
-		<script type="text/javascript" src="tokensearch.js"></script>
+		<script type="text/javascript" src="../src/tokensearch.js"></script>
 	</head>
 	<body>
 		<div id="tokensearch"></div>
