Added the ability to tab through tokens

--- a/demo/index.html
+++ b/demo/index.html
@@ -30,6 +30,15 @@
 					id: 'custom',
 					type: 'text',
 					label: 'Custom'
+				}, {
+					id: 'brand',
+					type: 'select',
+					label: 'brand',
+					options: [
+						{text: 'D&G', value: 1},
+						{text: 'Gucci', value: 2},
+						{text: 'Zara', value: 3}
+					]
 				}]
 			});
 
